--- a/THANKS
+++ b/THANKS
@@ -120,6 +120,7 @@
   Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
   Robert Ögren			lists@roboros.com
   Roberto Bagnara		bagnara@cs.unipr.it
+  Roland Mainz			roland.mainz@nrubsig.org
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
   Simon Josefsson		jas@extundo.com
   Stephan Kulow			coolo@kde.org
